# secret-game

./: .clang-format  .gitignore  CMakeLists.txt
src/: game.cpp  game.hpp  level.cpp  level.hpp  main.cpp  player.cpp  player.hpp  vec2i.hpp
src/levels/: level1.cpp  level1.hpp
src/systems/: texture_cacher.cpp  texture_cacher.hpp
